syntax = "proto2";

package cmdconfig;

enum Operation {
	CREATE = 0;
	GET = 1;
	LIST = 2;
	UPDATE = 3;
	PATCH = 4;
	DELETE = 5;
	APPLY = 6;	
}

message ResourceCmdConfig {
	repeated CmdConfig Resources = 1;
}

message CmdConfig {
	required string Name = 1;
	required string Usage = 2;
	required string ShortDescription = 3;
	required string LongDescription = 4;
	repeated CmdOperation Operations = 5;
}

message CmdOperation {
	required Operation Name = 1;
	repeated Option Options = 2;
}

message Option {
	required string Name = 1;
	required string ShortName = 2;
	required string Default = 3;
	required string Type = 4;
	required string Description = 5;
	required bool Required = 6;
}