syntax = "proto3";

package leveler;

import "util.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

service ResourceEndpoint {
    rpc Get (ResourceId) returns (google.protobuf.Any) {}
    rpc List (Query) returns (ResourceList) {}
    rpc Create (google.protobuf.Any) returns (ResourceId) {}
    rpc Update (google.protobuf.Any) returns (google.protobuf.Any) {}
    rpc Delete (ResourceId) returns (google.protobuf.Empty) {}
}

message ResourceId {
    string Id = 1;
}

message ResourceList {
	repeated google.protobuf.Any Results = 1;
}